--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,15 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "daisyui": "^2.51.3",
     "solid-js": "^1.6.10"
   }
 }
