--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "vite-plugin-solid": "^2.5.0"
   },
   "dependencies": {
+    "@feathersjs/socketio-client": "^5.0.0",
     "daisyui": "^2.51.3",
+    "socket.io-client": "^4.6.1",
     "solid-js": "^1.6.10"
   }
 }
